--- a/TP1+TP2 RI.ipynb
+++ b/TP1+TP2 RI.ipynb
@@ -615,6 +615,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercice 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
